Prevent event list overflow on medium up screen sizes

--- a/src/domain/events/eventList/eventList.module.scss
+++ b/src/domain/events/eventList/eventList.module.scss
@@ -23,10 +23,11 @@
 
 .table {
   margin-top: calc(0px - var(--spacing-4-xl));
+  max-width: calc(100vw - 2 * var(--spacing-s));
+  overflow: auto;
 
-  @include small-down {
+  @include medium-up {
     max-width: calc(100vw - 2 * var(--spacing-m));
-    overflow: auto;
   }
 }
 
